[tool.poetry]
name = "endurain"
version = "0.17.5"
description = "Endurain API for the Endurain app"
authors = ["João Vitória Silva <8648976+joaovitoriasilva@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.131.0"
uvicorn = "^0.41.0"
python-dotenv = "^1.2.1"
sqlalchemy = "^2.0.46"
apscheduler = "^3.11.2"
requests = "^2.32.5"
stravalib = "^2.4"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.49b0"
opentelemetry-exporter-otlp = "^1.25.0"
python-multipart = "^0.0.22"
gpxpy = "^1.6.2"
tcxreader = "^0.4.11"
alembic = "^1.18.4"
joserfc = "^1.6.2"
fitdecode = "^0.11.0"
numpy = "^2.4.2"
geopy = "^2.4.1"
flexparser = "^0.4"
pydantic-core = "^2.41.5"
importlib-metadata = "^8.5.0"
garminconnect = "^0.2.38"
websockets = "^16.0"
timezonefinder = "^8.2.1"
psycopg = {version = "^3.3.3", extras = ["binary", "pool"]}
poetry = "^2.3.2"
user-agents = "^2.2.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
garth = "^0.5.16"
apprise = "^1.9.7"
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = "^8.2"}
psutil = "^7.2.2"
python-magic = "^0.4.27"
pwdlib = {version = "^0.3.0", extras = ["argon2", "bcrypt"]}
authlib = "^1.6.8"
httpx = "^0.28.1"
itsdangerous = "^2.2.0"
slowapi = "^0.1.9"
safeuploads = {extras = ["fastapi"], version = "^0.1.2"}
bleach = "^6.3.0"
aiofiles = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
faker = "^33.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --strict-markers --cov=app --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
