[project]
name = "endurain"
version = "0.18.1"
description = "Endurain API for the Endurain app"
authors = [{name = "João Vitória Silva", email = "joao@endurain.com"}]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "apscheduler>=3.11.2",
    "requests>=2.33.1",
    "stravalib>=2.4",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "python-multipart>=0.0.26",
    "gpxpy>=1.6.2",
    "tcxreader>=0.4.11",
    "alembic>=1.18.4",
    "joserfc>=1.6.4",
    "fitdecode>=0.11.0",
    "numpy>=2.4.4",
    "geopy>=2.4.1",
    "flexparser>=0.4",
    "pydantic-core>=2.46.2",
    "pydantic-settings>=2.6.0",
    "importlib-metadata>=8.5.0",
    "garminconnect>=0.3.2",
    "websockets>=16.0",
    "timezonefinder>=8.2.2",
    "psycopg[binary,pool]>=3.3.3",
    "user-agents>=2.2.0",
    "pydantic[email]>=2.12.5",
    "apprise>=1.9.9",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "psutil>=7.2.2",
    "python-magic>=0.4.27",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "authlib>=1.6.11",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "slowapi>=0.1.9",
    "safeuploads[fastapi]>=1.0.0",
    "bleach>=6.3.0",
    "aiofiles>=25.1.0",
    "staticmap>=0.5.7",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "faker>=40.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --strict-markers --cov=app --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
