[project]
name = "endurain"
version = "0.19.0"
description = "Endurain API for the Endurain app"
authors = [{name = "João Vitória Silva", email = "joao@endurain.com"}]
# readme intentionally omitted — internal app, not published to PyPI
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "apscheduler>=3.11.2",
    "requests>=2.33.1",
    "stravalib>=2.4",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "python-multipart>=0.0.26",
    "gpxpy>=1.6.2",
    "tcxreader>=0.4.11",
    "alembic>=1.18.4",
    "joserfc>=1.6.4",
    "fitdecode>=0.11.0",
    "numpy>=2.4.4",
    "geopy>=2.4.1",
    "flexparser>=0.4",
    "pydantic-core>=2.46.2",
    "pydantic-settings>=2.6.0",
    "importlib-metadata>=8.5.0",
    "garminconnect>=0.3.2",
    "websockets>=16.0",
    "timezonefinder>=8.2.2",
    "psycopg[binary,pool]>=3.3.3",
    "user-agents>=2.2.0",
    "pydantic[email]>=2.12.5",
    "apprise>=1.9.9",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "psutil>=7.2.2",
    "python-magic>=0.4.27",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "authlib>=1.6.11",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "slowapi>=0.1.9",
    "safeuploads[fastapi]>=1.0.0",
    "bleach>=6.3.0",
    "aiofiles>=25.1.0",
    "staticmap>=0.5.7",
    "redis>=7.4.0",
]

[dependency-groups]
typecheck = [
    "mypy>=1.20.2",
    "types-requests",
    "types-bleach",
    "types-psutil",
    "types-qrcode",
    "types-aiofiles",
    "types-Authlib",
]
lint = [
    "ruff>=0.15.12",
]
test = [
    "httpx>=0.28.1",
    "faker>=40.15.0",
    "hypothesis>=6.150.0",
    "import-linter>=2.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
dev = [
    "hatch>=1.16.5",
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "typecheck"},
]
docs = [
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.29.0",
]

[tool.uv]
required-version = "0.11.18"
exclude-newer = "30 days"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
only-include = ["app"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.hatch.envs.default.scripts]
lint = "ruff check . --fix"
format = "ruff format ."
lint-check = "ruff check ."
format-check = "ruff format --check ."
test = "pytest"
typecheck = "mypy"
validate = ["lint", "format", "test", "typecheck"]
check = ["lint-check", "format-check", "test", "typecheck"]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--tb=short --strict-markers --cov --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning:slowapi.*",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "*/alembic/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.13"
incremental = false
check_untyped_defs = true
mypy_path = ["app"]
files = ["app"]
exclude = ["tests/", "alembic/"]

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "staticmap",
    "fitdecode",
    "garminconnect",
    "geopy.*",
    "tcxreader",
    "user_agents",
    "safeuploads.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends/Query) — tracked in https://codeberg.org/endurain-project/endurain/issues/680
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # allow assert and test data with password-like strings
"app/alembic/**/*.py" = ["E402", "I001"]  # alembic migrations have specific import order
"app/alembic/versions/v0_3_0_migration.py" = ["S105", "S106"]  # legitimate password hashes in seed migration
"app/auth/identity_providers/public_router.py" = ["S105", "S106"]  # false positive on token_type
"app/auth/schema.py" = ["S105", "S106"]  # false positive on token_type Literal defaults
"app/auth/security.py" = ["S105", "S106"]  # false positive on token_type string comparisons
"app/auth/utils.py" = ["S105", "S106"]  # false positive on cookie name constants
"app/main.py" = ["S105"]  # false positive on env var value
"app/profile/mfa_store.py" = ["S105"]  # false positive on Redis key prefix
"app/profile/**/*.py" = ["A005"]  # tracked in https://codeberg.org/endurain-project/endurain/issues/677

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
